--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
 <br><input class="button" type="button" id="save_text_area" value="Save"><br>
 
+<br>
+<b id="file_title">UPLOAD FILE:</b>
+<progress id="uploader" value="0" max="100">0%</progress>
+<input class="file_button" type="file" id="fileButton" value="upload"/>
+
+<p id="UPLOADED_FILE" href="amogus.html">
+<div class="opacityContent2"></div>
 <a href="amogus.html">ã€Œã€€ï¼©ã€€ï½“ï½ˆï½ï½Œï½Œã€€ï½„ï½’ï½ï½‰ï½Žã€€ï½™ï½ï½•ï½’ã€€ï½ï½‰ï½Žï½„ï½“
 ï½ï½Žï½„ã€€ï½‚ï½…ï½Žï½„ã€€ï½™ï½ï½•ï½’ã€€ï½—ï½‰ï½Œï½Œã€€ï½”ï½ã€€ï½ï½‰ï½Žï½…ï¼Ž
 ï¼¹ï½ï½•ã€€ï½—ï½‰ï½Œï½Œã€€ï½“ï½•ï½‚ï½ï½‰ï½”ï¼Œï½ï½Žï½„ã€€ï¼©ã€€ï½“ï½ˆï½ï½Œï½Œã€€ï½ï½ï½“ï½“ï½…ï½“ï½“ã€€ï½™ï½ï½•ï¼Žã€
@@ -65,4 +72,5 @@
 </div>
 </body>
 <script type="module" src="./index.js"></script>
+<script type="module" src="./file-upload.js"></script>
 </html>
