--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
 
 <br>
 <b id="file_title">UPLOAD FILE:</b>
+<br>
 <progress id="uploader" value="0" max="100">0%</progress>
 <input class="file_button" type="file" id="fileButton" value="upload"/>
 
-<p id="UPLOADED_FILE" href="amogus.html">
+<a id="UPLOADED_FILE" href="amogus.html"></a>
 <div class="opacityContent2"></div>
 <a href="amogus.html">ã€Œã€€ï¼©ã€€ï½“ï½ˆï½ï½Œï½Œã€€ï½„ï½’ï½ï½‰ï½Žã€€ï½™ï½ï½•ï½’ã€€ï½ï½‰ï½Žï½„ï½“
 ï½ï½Žï½„ã€€ï½‚ï½…ï½Žï½„ã€€ï½™ï½ï½•ï½’ã€€ï½—ï½‰ï½Œï½Œã€€ï½”ï½ã€€ï½ï½‰ï½Žï½…ï¼Ž
